[package]
name = "hermes"
version = "0.1.0"
edition = "2021"

[dependencies]
json = "0.12.4"
ctrlc = "3"
reqwest = { version = "0.11", features = ["blocking", "json"] }
clap = { version = "4.5.36", features = ["derive"] }
tokio = { version = "1.44.2", features = ["full"] }
anyhow = "1.0.98"
log = "0.4.27"

[dev-dependencies]
criterion = "0.5"

[[bench]]
name = "compare"
harness = false

[[bench]]
name = "logging"
harness = false