[package]
name = "hermes"
version = "0.1.0"
edition = "2021"

[dependencies]
json = "0.12.4"
tokio = { version = "1.44.2", features = ["full"] }
reqwest = { version = "0.11", features = ["blocking", "json"] }
anyhow = "1.0.98"
dotenv = "0.15"
serde = { version = "1.0.219", features = ["derive"] }

[dev-dependencies]
criterion = "0.5"

[[bench]]
name = "compare"
harness = false

[[bench]]
name = "logging"
harness = false