[package]
name = "hermes"
version = "0.1.0"
edition = "2021"

[dependencies]
json = "0.12.4"
tokio = { version = "1.44.2", features = ["full"] }
reqwest = { version = "0.11", features = ["blocking", "json"] }
anyhow = "1.0.98"
dotenv = "0.15"
time = { version = "0.3", features = ["formatting", "macros"] }
log = "0.4.27"
once_cell = "1.21.3"

[dev-dependencies]
criterion = "0.5"

[[bench]]
name = "compare"
harness = false

[[bench]]
name = "logging"
harness = false